--- a/index.html
+++ b/index.html
@@ -272,23 +272,24 @@
             letter-spacing: 0.5px;
         }
 
-        .view-btn {
-            background: #FF9900;
-            color: white;
+        .btn-row { display:flex; gap:8px; margin-top:10px; flex-wrap:wrap }
+        .view-btn, .buy-btn {
+            display:inline-block;
+            text-align:center;
+            text-decoration:none;
             border: none;
-            padding: 8px 16px;
+            padding: 8px 12px;
             border-radius: 4px;
             cursor: pointer;
             font-weight: bold;
             font-size: 13px;
-            transition: background 0.2s;
-            width: 100%;
-            margin-top: 10px;
+            transition: background 0.2s, transform 0.1s;
+            flex:1 1 140px;
         }
-
-        .view-btn:hover {
-            background: #F57C00;
-        }
+        .view-btn { background:#111827; color:#ffffff }
+        .view-btn:hover { background:#0b1220 }
+        .buy-btn { background:#FF9900; color:#111827 }
+        .buy-btn:hover { background:#F57C00 }
 
         /* ABOUT SECTION */
         .about-section {
@@ -481,7 +482,10 @@
                         <span class="prime-badge">ECO</span>
                     </div>
                 </div>
-                <button class="view-btn">Ver Ejemplo Completo</button>
+                                <div class="btn-row">
+                                    <a class="view-btn" href="ejemplos/template-paneles-solares.html" onclick="event.stopPropagation()">Ver Ficha Amazon</a>
+                                    <a class="buy-btn" href="ejemplos/landing-paneles-solares.html" onclick="event.stopPropagation()">Landing: Comprar en Amazon</a>
+                                </div>
             </div>
 
             <!-- SMARTWATCH -->
@@ -504,7 +508,10 @@
                         <span class="prime-badge">PRIME</span>
                     </div>
                 </div>
-                <button class="view-btn">Ver Ejemplo Completo</button>
+                                <div class="btn-row">
+                                    <a class="view-btn" href="ejemplos/template-smartwatch.html" onclick="event.stopPropagation()">Ver Ficha Amazon</a>
+                                    <a class="buy-btn" href="ejemplos/landing-smartwatch.html" onclick="event.stopPropagation()">Landing: Comprar en Amazon</a>
+                                </div>
             </div>
 
             <!-- ZAPATILLAS -->
@@ -527,7 +534,10 @@
                         <span class="prime-badge">PRIME</span>
                     </div>
                 </div>
-                <button class="view-btn">Ver Ejemplo Completo</button>
+                                <div class="btn-row">
+                                    <a class="view-btn" href="ejemplos/template-zapatillas.html" onclick="event.stopPropagation()">Ver Ficha Amazon</a>
+                                    <a class="buy-btn" href="ejemplos/landing-zapatillas.html" onclick="event.stopPropagation()">Landing: Comprar en Amazon</a>
+                                </div>
             </div>
 
             <!-- MONITOR 4K -->
@@ -550,7 +560,10 @@
                         <span class="prime-badge">PRO</span>
                     </div>
                 </div>
-                <button class="view-btn">Ver Ejemplo Completo</button>
+                                <div class="btn-row">
+                                    <a class="view-btn" href="ejemplos/template-monitor-4k.html" onclick="event.stopPropagation()">Ver Ficha Amazon</a>
+                                    <a class="buy-btn" href="ejemplos/landing-monitor-4k.html" onclick="event.stopPropagation()">Landing: Comprar en Amazon</a>
+                                </div>
             </div>
         </div>
 
