Fix: add mcf/ index for Pages and link to folder

--- a/index.html
+++ b/index.html
@@ -670,10 +670,11 @@
     <li>Distintivos de velocidad para mostrar ETA y aumentar conversión.</li>
   </ul>
   <div style="display:flex;gap:12px;flex-wrap:wrap">
-    <a href="mcf.html" style="background:#111827;color:#fff;padding:10px 14px;border-radius:8px;text-decoration:none">Guía: MCF en tu sitio</a>
+    <a href="mcf/" style="background:#111827;color:#fff;padding:10px 14px;border-radius:8px;text-decoration:none">Guía: MCF en tu sitio</a>
     <a href="https://sell.amazon.com/fulfillment-by-amazon/fba-multi-channel" target="_blank" rel="noopener" style="background:#f3f4f6;color:#111827;padding:10px 14px;border-radius:8px;text-decoration:none;border:1px solid #e5e7eb">Más info oficial</a>
   </div>
 </section>
 </body>
 </html>
+
 
