Add: tabla de comparación 'Compra en Amazon vs Checkout Propio + MCF' en sección MCF

--- a/index.html
+++ b/index.html
@@ -669,7 +669,41 @@
     <li>Inventario unificado y precios predecibles (recepción, embalaje y envío).</li>
     <li>Distintivos de velocidad para mostrar ETA y aumentar conversión.</li>
   </ul>
-  <div style="display:flex;gap:12px;flex-wrap:wrap">
+  <h3 style="margin:20px 0 12px 0;font-size:16px">Comparación: Dos estrategias de venta</h3>
+  <table style="width:100%;border-collapse:collapse;margin:12px 0;color:#374151">
+    <tr style="background:#f3f4f6">
+      <th style="border:1px solid #e5e7eb;padding:10px;text-align:left">Aspecto</th>
+      <th style="border:1px solid #e5e7eb;padding:10px;text-align:left">Compra en Amazon</th>
+      <th style="border:1px solid #e5e7eb;padding:10px;text-align:left">Checkout Propio + MCF</th>
+    </tr>
+    <tr>
+      <td style="border:1px solid #e5e7eb;padding:10px"><strong>Pago</strong></td>
+      <td style="border:1px solid #e5e7eb;padding:10px">Amazon gestiona</td>
+      <td style="border:1px solid #e5e7eb;padding:10px">Tú (PayPal, Stripe, etc.)</td>
+    </tr>
+    <tr style="background:#f9fafb">
+      <td style="border:1px solid #e5e7eb;padding:10px"><strong>Envío</strong></td>
+      <td style="border:1px solid #e5e7eb;padding:10px">Amazon FBA (rápido)</td>
+      <td style="border:1px solid #e5e7eb;padding:10px">Amazon MCF (igual de rápido)</td>
+    </tr>
+    <tr>
+      <td style="border:1px solid #e5e7eb;padding:10px"><strong>Cliente</strong></td>
+      <td style="border:1px solid #e5e7eb;padding:10px">Compra en Amazon.com</td>
+      <td style="border:1px solid #e5e7eb;padding:10px">Compra en tu sitio</td>
+    </tr>
+    <tr style="background:#f9fafb">
+      <td style="border:1px solid #e5e7eb;padding:10px"><strong>Comisión</strong></td>
+      <td style="border:1px solid #e5e7eb;padding:10px">15-45% (según categoría)</td>
+      <td style="border:1px solid #e5e7eb;padding:10px">Solo MCF fulfillment</td>
+    </tr>
+    <tr>
+      <td style="border:1px solid #e5e7eb;padding:10px"><strong>Brand</strong></td>
+      <td style="border:1px solid #e5e7eb;padding:10px">Amazon es la marca</td>
+      <td style="border:1px solid #e5e7eb;padding:10px">Tu marca es protagonista</td>
+    </tr>
+  </table>
+  <p style="margin:16px 0 0 0;color:#666;font-size:13px"><strong>Recomendación:</strong> Comienza con "Compra en Amazon" para alcance; migra a checkout propio + MCF cuando necesites más control de marca y márgenes.</p>
+  <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:16px">
     <a href="mcf/" style="background:#111827;color:#fff;padding:10px 14px;border-radius:8px;text-decoration:none">Guía: MCF en tu sitio</a>
     <a href="https://sell.amazon.com/fulfillment-by-amazon/fba-multi-channel" target="_blank" rel="noopener" style="background:#f3f4f6;color:#111827;padding:10px 14px;border-radius:8px;text-decoration:none;border:1px solid #e5e7eb">Más info oficial</a>
   </div>
