Add: imagenes Unsplash templates

--- a/ejemplos/landing-monitor-4k.html
+++ b/ejemplos/landing-monitor-4k.html
@@ -42,8 +42,8 @@
 <body>
   <header>
     <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:16px">
-      <div class="brand">ProDisplay â€¢ Landing</div>
-      <a href="template-monitor-4k.html" style="color:#e5e7eb;text-decoration:none;font-weight:700">Ver ficha estilo Amazon â†’</a>
+      <div class="brand">ProDisplay • Landing</div>
+      <a href="template-monitor-4k.html" style="color:#e5e7eb;text-decoration:none;font-weight:700">Ver ficha estilo Amazon →</a>
     </div>
   </header>
 
@@ -57,7 +57,7 @@
         <span class="old">$649.99</span>
       </div>
       <div class="cta-row">
-        <a class="btn btn-amz" href="https://www.amazon.com/s?k=monitor+4k+usb-c+dci-p3" target="_blank" rel="nofollow noopener noreferrer">ðŸ›’ Comprar en Amazon</a>
+        <a class="btn btn-amz" href="https://www.amazon.com/s?k=monitor+4k+usb-c+dci-p3" target="_blank" rel="nofollow noopener noreferrer">🛒 Comprar en Amazon</a>
         <a class="btn btn-alt" href="template-monitor-4k.html">Ver ficha Amazon (simulada)</a>
       </div>
     </div>
