--- a/ejemplos/landing-zapatillas.html
+++ b/ejemplos/landing-zapatillas.html
@@ -42,8 +42,8 @@
 <body>
   <header>
     <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:16px">
-      <div class="brand">SprintMax â€¢ Landing</div>
-      <a href="template-zapatillas.html" style="color:#fff7ed;text-decoration:none;font-weight:700">Ver ficha estilo Amazon â†’</a>
+      <div class="brand">SprintMax • Landing</div>
+      <a href="template-zapatillas.html" style="color:#fff7ed;text-decoration:none;font-weight:700">Ver ficha estilo Amazon →</a>
     </div>
   </header>
 
@@ -57,19 +57,19 @@
         <span class="old">$179.99</span>
       </div>
       <div class="cta-row">
-        <a class="btn btn-amz" href="https://www.amazon.com/s?k=running+carbon+shoes" target="_blank" rel="nofollow noopener noreferrer">ðŸ›’ Comprar en Amazon</a>
+        <a class="btn btn-amz" href="https://www.amazon.com/s?k=running+carbon+shoes" target="_blank" rel="nofollow noopener noreferrer">🛒 Comprar en Amazon</a>
         <a class="btn btn-alt" href="template-zapatillas.html">Ver ficha Amazon (simulada)</a>
       </div>
     </div>
     <div class="card p24">
-      <div style="height:260px;display:flex;align-items:center;justify-content:center;font-size:80px">ðŸ‘Ÿ</div>
+      <div style="height:260px;background:url('https://images.unsplash.com/photo-1542291026-7eec264c27ff?w=600&h=260&fit=crop&q=80') center/cover;border-radius:8px"></div>
       <div class="section">
         <h2>Beneficios Clave</h2>
         <div class="grid">
           <div class="li"><strong>185g</strong><span>peso ultraligero</span></div>
-          <div class="li"><strong>Placa carbono</strong><span>retorno de energÃ­a</span></div>
+          <div class="li"><strong>Placa carbono</strong><span>retorno de energía</span></div>
           <div class="li"><strong>800+ km</strong><span>durabilidad garantizada</span></div>
-          <div class="li"><strong>IAAF</strong><span>aprobaciÃ³n competitiva</span></div>
+          <div class="li"><strong>IAAF</strong><span>aprobación competitiva</span></div>
         </div>
       </div>
     </div>
