--- a/ejemplos/template-monitor-4k.html
+++ b/ejemplos/template-monitor-4k.html
@@ -679,7 +679,7 @@
         <!-- HERO SECTION -->
         <section class="hero">
             <div class="hero-image">
-                <img src="https://via.placeholder.com/400x400?text=Monitor+4K+Pro" alt="Monitor ProDisplay Elite 32 4K">
+                <img src="https://images.unsplash.com/photo-1527443224154-c4a3942d3acf?w=500&h=500&fit=crop&q=80" alt="Monitor ProDisplay Elite 32 4K">
             </div>
             <div class="hero-content">
                 <h1>Monitor 4K ProDisplay Elite 32 - USB-C Thunderbolt 3</h1>
