--- a/ejemplos/template-smartwatch.html
+++ b/ejemplos/template-smartwatch.html
@@ -471,20 +471,20 @@
             <!-- COLUMNA IZQUIERDA: IMÁGENES -->
             <div class="product-images">
                 <div class="main-image">
-                    <img src="https://via.placeholder.com/500x500?text=Smartwatch+FitPulse" alt="Smartwatch Principal">
+                    <img src="https://images.unsplash.com/photo-1579586337278-3befd40fd17a?w=600&h=600&fit=crop&q=80" alt="Smartwatch Principal">
                 </div>
                 <div class="thumbnails">
                     <div class="thumbnail">
-                        <img src="https://via.placeholder.com/100x100?text=Vista+1" alt="Vista 1">
+                        <img src="https://images.unsplash.com/photo-1579586337278-3befd40fd17a?w=150&h=150&fit=crop&q=80" alt="Vista 1">
                     </div>
                     <div class="thumbnail">
-                        <img src="https://via.placeholder.com/100x100?text=Vista+2" alt="Vista 2">
+                        <img src="https://images.unsplash.com/photo-1544117519-31a4b719223d?w=150&h=150&fit=crop&q=80" alt="Vista 2">
                     </div>
                     <div class="thumbnail">
-                        <img src="https://via.placeholder.com/100x100?text=Corriendo" alt="Vista 3">
+                        <img src="https://images.unsplash.com/photo-1434494878577-86c23bcb06b9?w=150&h=150&fit=crop&q=80" alt="Vista 3">
                     </div>
                     <div class="thumbnail">
-                        <img src="https://via.placeholder.com/100x100?text=Pantalla" alt="Vista 4">
+                        <img src="https://images.unsplash.com/photo-1523395243481-163f8f6155ab?w=150&h=150&fit=crop&q=80" alt="Vista 4">
                     </div>
                 </div>
             </div>
