--- a/ejemplos/template-zapatillas.html
+++ b/ejemplos/template-zapatillas.html
@@ -512,20 +512,20 @@
             <!-- COLUMNA IZQUIERDA: IMÁGENES -->
             <div class="product-images">
                 <div class="main-image">
-                    <img src="https://via.placeholder.com/500x500?text=Zapatilla+SprintMax" alt="Zapatilla Principal">
+                    <img src="https://images.unsplash.com/photo-1542291026-7eec264c27ff?w=600&h=600&fit=crop&q=80" alt="Zapatilla Principal">
                 </div>
                 <div class="thumbnails">
                     <div class="thumbnail">
-                        <img src="https://via.placeholder.com/100x100?text=Lateral" alt="Vista Lateral">
+                        <img src="https://images.unsplash.com/photo-1542291026-7eec264c27ff?w=150&h=150&fit=crop&q=80" alt="Vista Lateral">
                     </div>
                     <div class="thumbnail">
-                        <img src="https://via.placeholder.com/100x100?text=Frontal" alt="Vista Frontal">
+                        <img src="https://images.unsplash.com/photo-1460353581641-37baddab0fa2?w=150&h=150&fit=crop&q=80" alt="Vista Frontal">
                     </div>
                     <div class="thumbnail">
-                        <img src="https://via.placeholder.com/100x100?text=Corredor" alt="En Acción">
+                        <img src="https://images.unsplash.com/photo-1595950653106-6c9ebd614d3a?w=150&h=150&fit=crop&q=80" alt="En Acción">
                     </div>
                     <div class="thumbnail">
-                        <img src="https://via.placeholder.com/100x100?text=Suela" alt="Suela">
+                        <img src="https://images.unsplash.com/photo-1606107557195-0e29a4b5b4aa?w=150&h=150&fit=crop&q=80" alt="Suela">
                     </div>
                 </div>
             </div>
