--- a/ejemplos/landing-paneles-solares.html
+++ b/ejemplos/landing-paneles-solares.html
@@ -42,8 +42,8 @@
 <body>
   <header>
     <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:16px">
-      <div class="brand">EnergÃ­a Verde â€¢ Landing</div>
-      <a href="template-paneles-solares.html" style="color:#ecfeff;text-decoration:none;font-weight:700">Ver ficha estilo Amazon â†’</a>
+      <div class="brand">Energía Verde • Landing</div>
+      <a href="template-paneles-solares.html" style="color:#ecfeff;text-decoration:none;font-weight:700">Ver ficha estilo Amazon →</a>
     </div>
   </header>
 
@@ -57,7 +57,7 @@
         <span class="old">$549.99</span>
       </div>
       <div class="cta-row">
-        <a class="btn btn-amz" href="https://www.amazon.com/s?k=panel+solar+500W" target="_blank" rel="nofollow noopener noreferrer">ðŸ›’ Comprar en Amazon</a>
+        <a class="btn btn-amz" href="https://www.amazon.com/s?k=panel+solar+500W" target="_blank" rel="nofollow noopener noreferrer">🛒 Comprar en Amazon</a>
         <a class="btn btn-alt" href="template-paneles-solares.html">Ver ficha Amazon (simulada)</a>
       </div>
     </div>
