Optimización UX/Marketing completa: pricing, testimonios, garantía, FAQ, integración WhatsApp y email

--- a/ejemplos/landing-smartwatch.html
+++ b/ejemplos/landing-smartwatch.html
@@ -67,7 +67,7 @@
         <h2>Beneficios Clave</h2>
         <div class="grid">
           <div class="li"><strong>Â±2 bpm</strong><span>precisiÃ³n de ritmo cardÃ­aco</span></div>
-          <div class="li"><strong>14 dÃ­as</strong><span>baterÃ­a de larga duraciÃ³n</span></div>
+          <div class="li"><strong>14 días</strong><span>batería de larga duración</span></div>
           <div class="li"><strong>100+ modos</strong><span>deporte y salud integrales</span></div>
           <div class="li"><strong>IP68</strong><span>resistencia al agua</span></div>
         </div>
@@ -78,14 +78,14 @@
   <section class="container section">
     <h2>Confianza y Resultados</h2>
     <div class="trust">
-      <div class="kpi"><div class="v">4.7â˜…</div><div>calificaciÃ³n media</div></div>
-      <div class="kpi"><div class="v">892</div><div>reseÃ±as totales</div></div>
-      <div class="kpi"><div class="v">20%</div><div>descuento con cupÃ³n</div></div>
+      <div class="kpi"><div class="v">4.7★</div><div>calificación media</div></div>
+      <div class="kpi"><div class="v">892</div><div>reseñas totales</div></div>
+      <div class="kpi"><div class="v">20%</div><div>descuento con cupón</div></div>
     </div>
   </section>
 
   <footer>
-    Landing de ejemplo con botÃ³n â€œComprar en Amazonâ€. No es una oferta real.
+    Landing de ejemplo con botón "Comprar en Amazon". No es una oferta real.
   </footer>
 <p style="margin:24px 0 0 0; color:#374151">¿Tienes checkout propio? <a href="../mcf.html">Usa MCF</a> para cumplir pedidos desde tu web.</p>
 </body>
