--- a/ejemplos/landing-zapatillas.html
+++ b/ejemplos/landing-zapatillas.html
@@ -78,14 +78,14 @@
   <section class="container section">
     <h2>Confianza y Resultados</h2>
     <div class="trust">
-      <div class="kpi"><div class="v">4.8â˜…</div><div>calificaciÃ³n media</div></div>
-      <div class="kpi"><div class="v">1,247</div><div>reseÃ±as totales</div></div>
-      <div class="kpi"><div class="v">15%</div><div>cupÃ³n RUNFAST15</div></div>
+      <div class="kpi"><div class="v">4.8★</div><div>calificación media</div></div>
+      <div class="kpi"><div class="v">1,247</div><div>reseñas totales</div></div>
+      <div class="kpi"><div class="v">15%</div><div>cupón RUNFAST15</div></div>
     </div>
   </section>
 
   <footer>
-    Landing de ejemplo con botÃ³n â€œComprar en Amazonâ€. No es una oferta real.
+    Landing de ejemplo con botón "Comprar en Amazon". No es una oferta real.
   </footer>
 <p style="margin:24px 0 0 0; color:#374151">¿Tienes checkout propio? <a href="../mcf.html">Usa MCF</a> para cumplir pedidos desde tu web.</p>
 </body>
