--- a/ejemplos/landing-paneles-solares.html
+++ b/ejemplos/landing-paneles-solares.html
@@ -67,9 +67,9 @@
         <h2>Beneficios Clave</h2>
         <div class="grid">
           <div class="li"><strong>22% eficiencia</strong><span>mÃ¡s energÃ­a con menos paneles</span></div>
-          <div class="li"><strong>ROI 5-7 aÃ±os</strong><span>ahorros sostenidos en tu factura</span></div>
-          <div class="li"><strong>25 aÃ±os garantÃ­a</strong><span>rendimiento respaldado a largo plazo</span></div>
-          <div class="li"><strong>InstalaciÃ³n sencilla</strong><span>compatibilidad con sistemas residenciales</span></div>
+          <div class="li"><strong>ROI 5-7 años</strong><span>ahorros sostenidos en tu factura</span></div>
+          <div class="li"><strong>25 años garantía</strong><span>rendimiento respaldado a largo plazo</span></div>
+          <div class="li"><strong>Instalación sencilla</strong><span>compatibilidad con sistemas residenciales</span></div>
         </div>
       </div>
     </div>
@@ -78,14 +78,14 @@
   <section class="container section">
     <h2>Confianza y Resultados</h2>
     <div class="trust">
-      <div class="kpi"><div class="v">-60%</div><div>COâ‚‚ estimado</div></div>
+      <div class="kpi"><div class="v">-60%</div><div>CO₂ estimado</div></div>
       <div class="kpi"><div class="v">+115$</div><div>ahorro anual</div></div>
-      <div class="kpi"><div class="v">25 aÃ±os</div><div>cobertura de garantÃ­a</div></div>
+      <div class="kpi"><div class="v">25 años</div><div>cobertura de garantía</div></div>
     </div>
   </section>
 
   <footer>
-    Landing de ejemplo con botÃ³n â€œComprar en Amazonâ€. No es una oferta real.
+    Landing de ejemplo con botón "Comprar en Amazon". No es una oferta real.
   </footer>
 <p style="margin:24px 0 0 0; color:#374151">¿Tienes checkout propio? <a href="../mcf.html">Usa MCF</a> para cumplir pedidos desde tu web.</p>
 </body>
