--- a/index.html
+++ b/index.html
@@ -128,18 +128,20 @@
 
         h1 { font-size: var(--font-size-7xl); font-weight: 900; text-shadow: 0 2px 20px rgba(242, 184, 181, 0.1); }
         h2 { 
-            font-size: 46px; 
-            font-weight: 900; 
+            font-size: 36px; 
+            font-weight: 800; 
             color: #0D1117;
-            margin-bottom: 28px;
-            margin-top: 48px;
+            margin-bottom: 20px;
+            margin-top: 32px;
             letter-spacing: -0.01em;
+            line-height: 1.25;
         }
         h3 { 
-            font-size: 32px; 
-            font-weight: 800;
-            margin-bottom: 16px;
-            margin-top: 24px;
+            font-size: 24px; 
+            font-weight: 700;
+            margin-bottom: 12px;
+            margin-top: 20px;
+            line-height: 1.35;
         }
         h4 { font-size: var(--font-size-xl); font-weight: 600; }
         h5 { font-size: var(--font-size-lg); font-weight: 600; }
@@ -172,13 +174,13 @@
 
         /* EYEBROW - Etiquetas superiores */
         .eyebrow {
-            font-weight: 900;
-            font-size: 13px;
-            letter-spacing: 0.15em;
+            font-weight: 800;
+            font-size: 12px;
+            letter-spacing: 0.12em;
             text-transform: uppercase;
             color: var(--acento-principal);
             display: inline-block;
-            margin-bottom: 18px;
+            margin-bottom: 14px;
         }
 
         /* HEADER PREMIUM - Sticky navigation */
@@ -309,24 +311,24 @@
             z-index: 2;
         }
         .hero h1 {
-            font-size: 92px;
-            font-weight: 900;
-            margin-bottom: 35px;
-            line-height: 1.1;
+            font-size: 56px;
+            font-weight: 800;
+            margin-bottom: 24px;
+            line-height: 1.15;
             color: #0D1117;
-            text-shadow: 0 4px 28px rgba(242, 184, 181, 0.25);
-            letter-spacing: -0.02em;
+            text-shadow: 0 2px 16px rgba(242, 184, 181, 0.2);
+            letter-spacing: -0.015em;
         }
         .hero-subtitle {
             font-family: var(--font-family-sans);
-            font-size: 20px;
+            font-size: 18px;
             margin-bottom: var(--space-2xl);
             color: var(--texto-secundario);
-            font-weight: 500;
-            max-width: 700px;
+            font-weight: 400;
+            max-width: 680px;
             margin-left: auto;
             margin-right: auto;
-            line-height: 1.7;
+            line-height: 1.65;
         }
         .hero-stats {
             display: flex;
@@ -353,15 +355,15 @@
         }
         .stat-number {
             font-family: 'Playfair Display', serif;
-            font-size: 52px;
-            font-weight: 900;
+            font-size: 42px;
+            font-weight: 800;
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 10px;
+            gap: 8px;
             color: var(--acento-principal);
             margin-bottom: 8px;
-            text-shadow: 0 3px 12px rgba(242, 184, 181, 0.35);
+            text-shadow: 0 2px 10px rgba(242, 184, 181, 0.3);
         }
         .stat-label {
             font-size: 13px;
@@ -379,10 +381,10 @@
             flex-wrap: wrap;
         }
         .hero-cta-row .btn-primary {
-            padding: 22px 52px;
-            font-size: 18px;
-            font-weight: 800;
-            box-shadow: 0 6px 24px rgba(242, 184, 181, 0.7), var(--shadow-lg-up);
+            padding: 18px 44px;
+            font-size: 16px;
+            font-weight: 700;
+            box-shadow: 0 4px 20px rgba(242, 184, 181, 0.6), var(--shadow-md-up);
         }
         .btn {
             padding: var(--space-md) var(--space-xl);
@@ -1336,14 +1338,14 @@
         .container { max-width: 1400px; margin: 0 auto }
         .section-header {
             text-align: center;
-            margin-bottom: 80px;
-            padding-top: 40px;
+            margin-bottom: 60px;
+            padding-top: 24px;
         }
         .section-header h2 {
-            font-size: 50px;
-            margin-bottom: var(--space-lg);
+            font-size: 38px;
+            margin-bottom: 16px;
             color: #0D1117;
-            font-weight: 900;
+            font-weight: 800;
         }
         .section-header p {
             font-size: var(--font-size-md);
