Further typography and messaging refinements: Templates section reframed as design examples, Stylebook emphasizes function over decoration, improved testimonials section header, Amazon Playbook repositioned as specialized resource

--- a/index.html
+++ b/index.html
@@ -2606,9 +2606,9 @@
     <section class="stylebook" id="stylebook">
         <div class="stylebook-container">
             <div class="stylebook-intro">
-                <span class="eyebrow">Neumo Lookbook</span>
-                <h2>Elige cómo se verá tu ficha: Web, Móvil o Landing híbrida</h2>
-                <p>Activa la vista que necesitas y revisa ejemplos rápidos de jerarquía, colores y storytelling. Así tu cliente puede decidir el formato perfecto antes de comprar.</p>
+                <span class="eyebrow">Sistema de Diseño</span>
+                <h2 style="font-family: var(--font-family-serif); font-size: 56px; font-weight: 900; letter-spacing: -0.015em;">Neumorfismo: Función sobre Decoración</h2>
+                <p style="font-size: 18px; line-height: 1.6;">Explora cómo nuestro sistema de diseño mejora la usabilidad y conversión a través de interacciones intuitivas y microinteracciones funcionales.</p>
                 <div class="style-toggle-row" role="tablist" aria-label="Selector de formato">
                     <button class="style-toggle active" data-target="web" type="button" role="tab" aria-selected="true">Vista Web (desktop)</button>
                     <button class="style-toggle" data-target="mobile" type="button" role="tab" aria-selected="false">Vista Móvil</button>
@@ -2827,8 +2827,9 @@
     <section class="amazon-playbook" id="amazon-playbook">
         <div class="container">
             <div class="amazon-header">
-                <h2>Amazon Playbook</h2>
-                <p>Todo lo específico de Amazon concentrado: visual A+, SEO, logística y landings de apoyo.</p>
+                <span class="eyebrow" style="display: inline-block;">Recursos Específicos</span>
+                <h2 style="font-family: var(--font-family-serif); font-size: 56px; font-weight: 900; letter-spacing: -0.015em;">Amazon Playbook Completo</h2>
+                <p style="font-size: 18px; line-height: 1.6;">Estrategia integral de UX/UI, contenido y conversión específicamente para Amazon</p>
             </div>
             <div class="amazon-grid">
                 <div class="amazon-card">
@@ -2855,7 +2856,11 @@
 
     <!-- SOCIAL PROOF -->
     <section class="social-proof">
-        <h2>Lo Que Dicen Nuestros Clientes</h2>
+        <div style="max-width: 1200px; margin: 0 auto; padding: 80px 20px;">
+            <div style="text-align: center; margin-bottom: 60px;">
+                <span class="eyebrow" style="display: inline-block;">Testimonios</span>
+                <h2 style="font-family: var(--font-family-serif); font-size: 56px; font-weight: 900; letter-spacing: -0.015em; margin: 20px 0;">Lo que dicen nuestros clientes</h2>
+            </div>
         <div class="testimonials">
             <div class="testimonial">
                 <div class="testimonial-rating">★★★★★</div>
@@ -2875,6 +2880,7 @@
                 <div class="testimonial-author">Juan Rodríguez</div>
                 <div class="testimonial-role">Vendedor marketplace - Categoría Tecnología</div>
             </div>
+        </div>
         </div>
     </section>
 
@@ -3016,8 +3022,9 @@
     <section class="templates-section" id="templates">
         <div class="container">
             <div class="section-header">
-                <h2>Templates Profesionales Listos para Usar</h2>
-                <p>Cada template incluye HTML, CSS, landing page y soporte de 30 días</p>
+                <span class="eyebrow" style="display: inline-block;">Ejemplos de Trabajo</span>
+                <h2 style="font-family: var(--font-family-serif); font-size: 56px; font-weight: 900; letter-spacing: -0.015em;">Templates Personalizados para Categorías</h2>
+                <p style="font-size: 18px; line-height: 1.6;">Diseños adaptados a diferentes industrias con metodología UX/UI centrada en conversión</p>
             </div>
             
             <div class="templates-grid">
