Final CTA section styling: H2 size increased to 64px, serif font family, improved visual hierarchy for conversion

--- a/index.html
+++ b/index.html
@@ -2148,14 +2148,18 @@
             text-align: center;
         }
         .final-cta h2 {
-            font-size: var(--font-size-6xl);
+            font-family: var(--font-family-serif);
+            font-size: 64px;
+            font-weight: 900;
             margin-bottom: var(--space-lg);
-            color: var(--acento-principal);
+            color: var(--texto-principal);
+            letter-spacing: -0.015em;
         }
         .final-cta p {
-            font-size: var(--font-size-md);
+            font-size: 18px;
             margin-bottom: var(--space-2xl);
             color: var(--texto-secundario);
+            line-height: 1.6;
         }
 
         /* WHATSAPP FLOATING - Optimizado */
