--- a/cotizacion.html
+++ b/cotizacion.html
@@ -434,10 +434,24 @@
     <header class="header">
         <div class="header-content">
             <a href="index.html" class="logo">
-                <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
-                    <rect x="3" y="3" width="18" height="18" rx="4"></rect>
-                    <path d="M7 12h10"></path>
-                    <path d="M12 7v10"></path>
+                <svg viewBox="0 0 32 32" style="width: 28px; height: 28px;">
+                    <defs>
+                        <linearGradient id="logoGrad1" x1="0%" y1="0%" x2="100%" y2="100%">
+                            <stop offset="0%" style="stop-color:#A4D2F4;stop-opacity:1" />
+                            <stop offset="100%" style="stop-color:#7CB8E8;stop-opacity:1" />
+                        </linearGradient>
+                        <linearGradient id="logoGrad2" x1="100%" y1="0%" x2="0%" y2="100%">
+                            <stop offset="0%" style="stop-color:#A4D2F4;stop-opacity:0.7" />
+                            <stop offset="100%" style="stop-color:#5A9FD4;stop-opacity:1" />
+                        </linearGradient>
+                    </defs>
+                    <g>
+                        <path d="M 6 8 L 10 5 L 14 8 L 10 11 Z" fill="url(#logoGrad1)" />
+                        <path d="M 10 11 L 14 8 L 14 18 L 10 21 Z" fill="url(#logoGrad2)" />
+                        <path d="M 18 8 L 22 5 L 26 8 L 22 11 Z" fill="url(#logoGrad1)" opacity="0.9" />
+                        <path d="M 22 11 L 26 8 L 26 18 L 22 21 Z" fill="#A4D2F4" opacity="0.5" />
+                        <path d="M 10 11 L 14 8 L 22 11 L 18 14 Z" fill="#0D3B66" opacity="0.08" />
+                    </g>
                 </svg>
                 NeoBook
                 <svg class="logo-star" viewBox="0 0 24 24">
