Corregir ruta de navegación: ../index.html en lugar de ../../index.html

--- a/ejemplos/tendencia-ai-ux.html
+++ b/ejemplos/tendencia-ai-ux.html
@@ -431,7 +431,7 @@
 
     <!-- NAVEGACIÓN FOOTER -->
     <div class="footer-nav">
-      <a href="../../index.html#tendencias" class="back-link">← Volver a Tendencias</a>
+      <a href="../index.html#tendencias" class="back-link">← Volver a Tendencias</a>
       <div style="font-size: 13px; color: var(--texto-secundario);">
         La IA no reemplaza diseño, lo potencia.
       </div>
