Agregar CTA 'Ver ejemplos en vivo' en hero + insertar Micro FAQ compacto arriba del fold (experiencia, tiempos, soporte, ejemplos)

--- a/index.html
+++ b/index.html
@@ -2842,6 +2842,7 @@
             <div class="hero-cta-row" style="gap: 16px;">
                 <a href="#templates" class="btn btn-primary" style="font-size: 16px; padding: 16px 32px;"><svg class="icon icon-md" viewBox="0 0 24 24"><rect x="3" y="3" width="18" height="18" rx="3"></rect><path d="M7 7h10v10H7z"></path></svg>Ver plantillas ahora</a>
                 <a href="#demo-video" class="btn btn-secondary" style="font-size: 16px; padding: 16px 32px;"><svg class="icon icon-md" viewBox="0 0 24 24"><polygon points="5 3 19 12 5 21 5 3"></polygon></svg>Ver demo rápido (2min)</a>
+                <a href="#case-studies" class="btn btn-secondary" style="font-size: 16px; padding: 16px 32px; background: transparent; color: var(--texto-principal); border: 2px solid var(--acento-principal);"><svg class="icon icon-md" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"></circle><circle cx="12" cy="12" r="2"></circle><circle cx="12" cy="12" r="6"></circle></svg>Ver ejemplos en vivo</a>
             </div>
             <div style="text-align: center; margin-top: 20px;">
                 <a href="cotizacion.html" style="font-size: 14px; color: var(--texto-terciario); text-decoration: underline; transition: color 0.2s;" onmouseover="this.style.color='var(--acento-principal)'" onmouseout="this.style.color='var(--texto-terciario)'">¿Preferís que lo hagamos por vos? Cotización gratis →</a>
@@ -2857,6 +2858,44 @@
                 <div class="badge-item"><svg class="icon icon-sm" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"></circle><polyline points="8 12 11 15 16 9"></polyline></svg><span>Metodología UX probada</span></div>
                 <div class="badge-item"><svg class="icon icon-sm" viewBox="0 0 24 24"><path d="M12 2L2 7l10 5 10-5-10-5z"></path><path d="M2 17l10 5 10-5"></path><path d="M2 12l10 5 10-5"></path></svg><span>Design System + Prototipado</span></div>
                 <div class="badge-item"><svg class="icon icon-sm" viewBox="0 0 24 24"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg><span>Métricas & Testing</span></div>
+            </div>
+        </div>
+    </section>
+
+    <!-- MICRO FAQ (compacto) -->
+    <section id="micro-faq" style="background: var(--blanco-puro); padding: 28px 20px; border-top: 1px solid rgba(164, 210, 244, 0.1); border-bottom: 1px solid rgba(164, 210, 244, 0.1);">
+        <div style="max-width: 1100px; margin: 0 auto;">
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(230px, 1fr)); gap: 16px; align-items: stretch;">
+                <div style="background: var(--fondo-principal); border-radius: 12px; padding: 16px; display: flex; align-items: center; gap: 10px;">
+                    <svg style="width: 18px; height: 18px; stroke: var(--acento-principal); fill: none;" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"></circle><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"></path><line x1="12" y1="17" x2="12.01" y2="17"></line></svg>
+                    <div>
+                        <div style="font-weight: 700; color: var(--texto-principal);">¿Necesito experiencia?</div>
+                        <div style="font-size: 13px; color: var(--texto-secundario)">No. Guía paso a paso, sin código.</div>
+                    </div>
+                </div>
+                <div style="background: var(--fondo-principal); border-radius: 12px; padding: 16px; display: flex; align-items: center; gap: 10px;">
+                    <svg style="width: 18px; height: 18px; stroke: var(--acento-principal); fill: none;" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
+                    <div>
+                        <div style="font-weight: 700; color: var(--texto-principal);">¿Cuánto tarda?</div>
+                        <div style="font-size: 13px; color: var(--texto-secundario)">24–48h promedio.</div>
+                    </div>
+                </div>
+                <div style="background: var(--fondo-principal); border-radius: 12px; padding: 16px; display: flex; align-items: center; gap: 10px;">
+                    <svg style="width: 18px; height: 18px; stroke: var(--acento-principal); fill: none;" viewBox="0 0 24 24"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg>
+                    <div>
+                        <div style="font-weight: 700; color: var(--texto-principal);">¿Hay soporte?</div>
+                        <div style="font-size: 13px; color: var(--texto-secundario)">Sí: WhatsApp/email por 60 días.</div>
+                    </div>
+                </div>
+                <a href="#case-studies" style="text-decoration: none;">
+                    <div style="background: var(--fondo-principal); border-radius: 12px; padding: 16px; display: flex; align-items: center; gap: 10px; border: 1px solid rgba(164,210,244,0.2);">
+                        <svg style="width: 18px; height: 18px; stroke: var(--acento-principal); fill: none;" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"></circle><circle cx="12" cy="12" r="2"></circle><circle cx="12" cy="12" r="6"></circle></svg>
+                        <div>
+                            <div style="font-weight: 700; color: var(--texto-principal);">¿Ver ejemplos en vivo?</div>
+                            <div style="font-size: 13px; color: var(--texto-secundario)">Sí: mirá proyectos reales →</div>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
